antlr/src/main/java/parser/ProgramParser.java
// Generated from Program.g4 by ANTLR 4.7.1

import expression.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, PRINT=3, READINT=4, WHILE=5, DO=6, ASSIGN=7, COMMA=8, LPAR=9, 
		RPAR=10, LCPAR=11, RCPAR=12, ADD=13, SUB=14, MUL=15, DIV=16, EQ=17, NEQ=18, 
		LESS=19, GR=20, LESSEQ=21, GREQ=22, NOT=23, AND=24, OR=25, VAR=26, NUM=27, 
		SPACE=28;
	public static final int
		RULE_start = 0, RULE_expressions = 1, RULE_expr = 2, RULE_vars = 3, RULE_ar_expressions = 4, 
		RULE_add_sub = 5, RULE_mul_div = 6, RULE_unary_ar = 7, RULE_or = 8, RULE_and = 9, 
		RULE_unary_logic = 10, RULE_cmp = 11, RULE_cmp_op = 12;
	public static final String[] ruleNames = {
		"start", "expressions", "expr", "vars", "ar_expressions", "add_sub", "mul_div", 
		"unary_ar", "or", "and", "unary_logic", "cmp", "cmp_op"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'if'", "'else'", "'print'", "'readint'", "'while'", "'do'", "'='", 
		"','", "'('", "')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'=='", 
		"'!='", "'<'", "'>'", "'<='", "'>='", "'!'", "'&&'", "'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IF", "ELSE", "PRINT", "READINT", "WHILE", "DO", "ASSIGN", "COMMA", 
		"LPAR", "RPAR", "LCPAR", "RCPAR", "ADD", "SUB", "MUL", "DIV", "EQ", "NEQ", 
		"LESS", "GR", "LESSEQ", "GREQ", "NOT", "AND", "OR", "VAR", "NUM", "SPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Program.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public Program v;
		public ExpressionsContext expressions;
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			((StartContext)_localctx).expressions = expressions();
			 ((StartContext)_localctx).v =  new Program(((StartContext)_localctx).expressions.v); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionsContext extends ParserRuleContext {
		public List<Expression> v;
		public ExprContext expr;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterExpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitExpressions(this);
		}
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			((ExpressionsContext)_localctx).expr = expr();
			 List<Expression> res = new ArrayList<>(); 
			 res.add(((ExpressionsContext)_localctx).expr.v); 
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << PRINT) | (1L << WHILE) | (1L << DO) | (1L << VAR))) != 0)) {
				{
				{
				setState(32);
				((ExpressionsContext)_localctx).expr = expr();
				 res.add(((ExpressionsContext)_localctx).expr.v); 
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((ExpressionsContext)_localctx).v =  res; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expression v;
		public Ar_expressionsContext ar_expressions;
		public OrContext or;
		public ExpressionsContext expressions;
		public ExpressionsContext first;
		public ExpressionsContext second;
		public VarsContext vars;
		public TerminalNode PRINT() { return getToken(ProgramParser.PRINT, 0); }
		public TerminalNode LPAR() { return getToken(ProgramParser.LPAR, 0); }
		public Ar_expressionsContext ar_expressions() {
			return getRuleContext(Ar_expressionsContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(ProgramParser.RPAR, 0); }
		public TerminalNode IF() { return getToken(ProgramParser.IF, 0); }
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public List<TerminalNode> LCPAR() { return getTokens(ProgramParser.LCPAR); }
		public TerminalNode LCPAR(int i) {
			return getToken(ProgramParser.LCPAR, i);
		}
		public List<ExpressionsContext> expressions() {
			return getRuleContexts(ExpressionsContext.class);
		}
		public ExpressionsContext expressions(int i) {
			return getRuleContext(ExpressionsContext.class,i);
		}
		public List<TerminalNode> RCPAR() { return getTokens(ProgramParser.RCPAR); }
		public TerminalNode RCPAR(int i) {
			return getToken(ProgramParser.RCPAR, i);
		}
		public TerminalNode ELSE() { return getToken(ProgramParser.ELSE, 0); }
		public TerminalNode WHILE() { return getToken(ProgramParser.WHILE, 0); }
		public TerminalNode DO() { return getToken(ProgramParser.DO, 0); }
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(ProgramParser.ASSIGN, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				match(PRINT);
				setState(43);
				match(LPAR);
				setState(44);
				((ExprContext)_localctx).ar_expressions = ar_expressions();
				setState(45);
				match(RPAR);
				 ((ExprContext)_localctx).v =  new Print(((ExprContext)_localctx).ar_expressions.v); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				match(IF);
				setState(49);
				((ExprContext)_localctx).or = or(0);
				setState(50);
				match(LCPAR);
				setState(51);
				((ExprContext)_localctx).expressions = expressions();
				setState(52);
				match(RCPAR);
				 ((ExprContext)_localctx).v =  new If(((ExprContext)_localctx).or.v, ((ExprContext)_localctx).expressions.v); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				match(IF);
				setState(56);
				((ExprContext)_localctx).or = or(0);
				setState(57);
				match(LCPAR);
				setState(58);
				((ExprContext)_localctx).first = expressions();
				setState(59);
				match(RCPAR);
				setState(60);
				match(ELSE);
				setState(61);
				match(LCPAR);
				setState(62);
				((ExprContext)_localctx).second = expressions();
				setState(63);
				match(RCPAR);
				 ((ExprContext)_localctx).v =  new IfElse(((ExprContext)_localctx).or.v, ((ExprContext)_localctx).first.v, ((ExprContext)_localctx).second.v); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				match(WHILE);
				setState(67);
				((ExprContext)_localctx).or = or(0);
				setState(68);
				match(LCPAR);
				setState(69);
				((ExprContext)_localctx).expressions = expressions();
				setState(70);
				match(RCPAR);
				 ((ExprContext)_localctx).v =  new While(((ExprContext)_localctx).or.v, ((ExprContext)_localctx).expressions.v); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(73);
				match(DO);
				setState(74);
				match(LCPAR);
				setState(75);
				((ExprContext)_localctx).expressions = expressions();
				setState(76);
				match(RCPAR);
				setState(77);
				match(WHILE);
				setState(78);
				((ExprContext)_localctx).or = or(0);
				 ((ExprContext)_localctx).v =  new DoWhile(((ExprContext)_localctx).or.v, ((ExprContext)_localctx).expressions.v); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				((ExprContext)_localctx).vars = vars();
				setState(82);
				match(ASSIGN);
				setState(83);
				((ExprContext)_localctx).ar_expressions = ar_expressions();
				 ((ExprContext)_localctx).v =  new Assignment(((ExprContext)_localctx).vars.v, ((ExprContext)_localctx).ar_expressions.v); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarsContext extends ParserRuleContext {
		public List<Variable> v;
		public Token VAR;
		public List<TerminalNode> VAR() { return getTokens(ProgramParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(ProgramParser.VAR, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ProgramParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ProgramParser.COMMA, i);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitVars(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			((VarsContext)_localctx).VAR = match(VAR);
			 List<Variable> res = new ArrayList<>(); 
			 res.add(new Variable((((VarsContext)_localctx).VAR!=null?((VarsContext)_localctx).VAR.getText():null))); 
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(91);
				match(COMMA);
				setState(92);
				((VarsContext)_localctx).VAR = match(VAR);
				 res.add(new Variable((((VarsContext)_localctx).VAR!=null?((VarsContext)_localctx).VAR.getText():null))); 
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((VarsContext)_localctx).v =  res; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ar_expressionsContext extends ParserRuleContext {
		public List<ArithmeticExpression> v;
		public Add_subContext add_sub;
		public List<Add_subContext> add_sub() {
			return getRuleContexts(Add_subContext.class);
		}
		public Add_subContext add_sub(int i) {
			return getRuleContext(Add_subContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ProgramParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ProgramParser.COMMA, i);
		}
		public Ar_expressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ar_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterAr_expressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitAr_expressions(this);
		}
	}

	public final Ar_expressionsContext ar_expressions() throws RecognitionException {
		Ar_expressionsContext _localctx = new Ar_expressionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ar_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((Ar_expressionsContext)_localctx).add_sub = add_sub(0);
			 List<ArithmeticExpression> res = new ArrayList<>(); 
			 res.add(((Ar_expressionsContext)_localctx).add_sub.v); 
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(104);
				match(COMMA);
				setState(105);
				((Ar_expressionsContext)_localctx).add_sub = add_sub(0);
				 res.add(((Ar_expressionsContext)_localctx).add_sub.v); 
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((Ar_expressionsContext)_localctx).v =  res; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Add_subContext extends ParserRuleContext {
		public ArithmeticExpression v;
		public Add_subContext l;
		public Mul_divContext mul_div;
		public Mul_divContext r;
		public Mul_divContext mul_div() {
			return getRuleContext(Mul_divContext.class,0);
		}
		public TerminalNode ADD() { return getToken(ProgramParser.ADD, 0); }
		public Add_subContext add_sub() {
			return getRuleContext(Add_subContext.class,0);
		}
		public TerminalNode SUB() { return getToken(ProgramParser.SUB, 0); }
		public Add_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterAdd_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitAdd_sub(this);
		}
	}

	public final Add_subContext add_sub() throws RecognitionException {
		return add_sub(0);
	}

	private Add_subContext add_sub(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Add_subContext _localctx = new Add_subContext(_ctx, _parentState);
		Add_subContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_add_sub, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(116);
			((Add_subContext)_localctx).mul_div = mul_div(0);
			 ((Add_subContext)_localctx).v =  ((Add_subContext)_localctx).mul_div.v; 
			}
			_ctx.stop = _input.LT(-1);
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(129);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new Add_subContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_add_sub);
						setState(119);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(120);
						match(ADD);
						setState(121);
						((Add_subContext)_localctx).r = ((Add_subContext)_localctx).mul_div = mul_div(0);
						 ((Add_subContext)_localctx).v =  new BinaryArithmeticExpression("+", ((Add_subContext)_localctx).l.v, ((Add_subContext)_localctx).r.v); 
						}
						break;
					case 2:
						{
						_localctx = new Add_subContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_add_sub);
						setState(124);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(125);
						match(SUB);
						setState(126);
						((Add_subContext)_localctx).r = ((Add_subContext)_localctx).mul_div = mul_div(0);
						 ((Add_subContext)_localctx).v =  new BinaryArithmeticExpression("-", ((Add_subContext)_localctx).l.v, ((Add_subContext)_localctx).r.v); 
						}
						break;
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Mul_divContext extends ParserRuleContext {
		public ArithmeticExpression v;
		public Mul_divContext l;
		public Unary_arContext unary_ar;
		public Unary_arContext unary_ar() {
			return getRuleContext(Unary_arContext.class,0);
		}
		public TerminalNode MUL() { return getToken(ProgramParser.MUL, 0); }
		public Mul_divContext mul_div() {
			return getRuleContext(Mul_divContext.class,0);
		}
		public TerminalNode DIV() { return getToken(ProgramParser.DIV, 0); }
		public Mul_divContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mul_div; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterMul_div(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitMul_div(this);
		}
	}

	public final Mul_divContext mul_div() throws RecognitionException {
		return mul_div(0);
	}

	private Mul_divContext mul_div(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Mul_divContext _localctx = new Mul_divContext(_ctx, _parentState);
		Mul_divContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_mul_div, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(135);
			((Mul_divContext)_localctx).unary_ar = unary_ar();
			 ((Mul_divContext)_localctx).v =  ((Mul_divContext)_localctx).unary_ar.v; 
			}
			_ctx.stop = _input.LT(-1);
			setState(150);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(148);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new Mul_divContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_mul_div);
						setState(138);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(139);
						match(MUL);
						setState(140);
						((Mul_divContext)_localctx).unary_ar = unary_ar();
						 ((Mul_divContext)_localctx).v =  new BinaryArithmeticExpression("*", ((Mul_divContext)_localctx).l.v, ((Mul_divContext)_localctx).unary_ar.v); 
						}
						break;
					case 2:
						{
						_localctx = new Mul_divContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_mul_div);
						setState(143);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(144);
						match(DIV);
						setState(145);
						((Mul_divContext)_localctx).unary_ar = unary_ar();
						 ((Mul_divContext)_localctx).v =  new BinaryArithmeticExpression("/", ((Mul_divContext)_localctx).l.v, ((Mul_divContext)_localctx).unary_ar.v); 
						}
						break;
					}
					} 
				}
				setState(152);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Unary_arContext extends ParserRuleContext {
		public ArithmeticExpression v;
		public Add_subContext add_sub;
		public Token VAR;
		public Token NUM;
		public TerminalNode READINT() { return getToken(ProgramParser.READINT, 0); }
		public TerminalNode LPAR() { return getToken(ProgramParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(ProgramParser.RPAR, 0); }
		public Add_subContext add_sub() {
			return getRuleContext(Add_subContext.class,0);
		}
		public TerminalNode VAR() { return getToken(ProgramParser.VAR, 0); }
		public TerminalNode NUM() { return getToken(ProgramParser.NUM, 0); }
		public Unary_arContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_ar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterUnary_ar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitUnary_ar(this);
		}
	}

	public final Unary_arContext unary_ar() throws RecognitionException {
		Unary_arContext _localctx = new Unary_arContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_unary_ar);
		try {
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case READINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				match(READINT);
				setState(154);
				match(LPAR);
				setState(155);
				match(RPAR);
				 ((Unary_arContext)_localctx).v =  new Read(); 
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				match(LPAR);
				setState(158);
				((Unary_arContext)_localctx).add_sub = add_sub(0);
				setState(159);
				match(RPAR);
				 ((Unary_arContext)_localctx).v =  ((Unary_arContext)_localctx).add_sub.v; 
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(162);
				((Unary_arContext)_localctx).VAR = match(VAR);
				 ((Unary_arContext)_localctx).v =  new Variable((((Unary_arContext)_localctx).VAR!=null?((Unary_arContext)_localctx).VAR.getText():null)); 
				}
				break;
			case NUM:
				enterOuterAlt(_localctx, 4);
				{
				setState(164);
				((Unary_arContext)_localctx).NUM = match(NUM);
				 ((Unary_arContext)_localctx).v =  new Num((((Unary_arContext)_localctx).NUM!=null?((Unary_arContext)_localctx).NUM.getText():null)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrContext extends ParserRuleContext {
		public LogicExpression v;
		public OrContext l;
		public AndContext and;
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public TerminalNode OR() { return getToken(ProgramParser.OR, 0); }
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public OrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitOr(this);
		}
	}

	public final OrContext or() throws RecognitionException {
		return or(0);
	}
